--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=3333
 
-spring.datasource.url=jdbc:mysql://localhost:3306/dataportal
+spring.datasource.url=jdbc:mysql://localhost:3306/portal
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
