--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=8080
+server.port=3333
 
-spring.datasource.url=jdbc:mysql://localhost:3306/dataportal
+spring.datasource.url=jdbc:mysql://localhost:3306/portal
 spring.datasource.username=root
-spring.datasource.password=Mysql@2022
+spring.datasource.password=roor
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
